Formatted code to increase readability.

--- a/src/main/webapp/secured/persons/edit.xhtml
+++ b/src/main/webapp/secured/persons/edit.xhtml
@@ -20,8 +20,9 @@ limitations under the License.
                 xmlns:my="http://java.sun.com/jsf/composite/components"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://java.sun.com/jsf/facelets">
-    <ui:define
-            name="title">#{personHome.managed ? msg['pages.persons.edit.title']: msg['pages.persons.add.title']}</ui:define>
+    <ui:define name="title">
+        #{personHome.managed ? msg['pages.persons.edit.title']: msg['pages.persons.add.title']}
+    </ui:define>
     <ui:define name="content">
         <f:metadata>
             <f:viewParam name="id"
@@ -50,7 +51,6 @@ limitations under the License.
                       label="#{msg['entities.person.fields.emailAddress']}"
                       value="#{personHome.instance.emailAddress}"/>
         <p:separator/>
-
         <div class="actions">
             <p:commandButton action="#{personHome.save}"
                              value="#{msg['global.actions.save']}"
